fix: fix cell color on ios

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -16,6 +16,7 @@ body {
 }
 
 .cell {
+    color: #000;
     width: 150px;
     height: 150px;
     vertical-align: middle;
